# vrrp-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  vrrp.toml.sample
src/: config.rs  constants.rs  interface.rs  lib.rs  main.rs  packet.rs  router.rs  socket.rs
src/vrrp/: constants.rs  interface.rs  mod.rs  packet.rs  router.rs  socket.rs  util.rs
test/: test_demote.sh  test_promote.sh  vrrp-1.toml  vrrp-2.toml
