[package]
name = "vrrp-test"
version = "0.0.1"
edition = "2018"

[dependencies]
nix = { version = "0.29.0", features = ["socket", "net", "ioctl"] }
ctrlc = "3.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
toml = "0.8.14"
arc-swap = "1.7.1"
once_cell = "1.19.0"
