[package]
name = "vrrp-test"
version = "0.0.1"
edition = "2018"

[dependencies]
nix = { version = "0.29.0", features = ["socket", "net", "uio"] }
serde = { version = "1.0.2", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.10"
toml = "0.8.14"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.38.0", features = [
  "sync",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "net",
  "signal",
] }
